# iDEA

./: .gitignore  README.md  pyproject.toml
benchmarks/: audit_release_equivalence.py  benchmark_density_kernels.py  benchmark_interacting.py  benchmark_reverse_engineering.py  counting_operator.py  golden_output_harness.py
benchmarks/interacting_baseline/: interacting_uu_80.npz  interacting_uud_60.npz  interacting_uudd_30.npz
iDEA/: observables.py  reverse_engineering.py
iDEA/methods/: interacting.py  interacting_det.py  non_interacting.py
nearsighted/: __init__.py  grids.py  hartree.py  ks_extract.py  metric_core.py
notes/: baseline_timings.txt  friend_optimization_advice.md  handoff.md
tests/: test_audit_release_equivalence.py  test_cli_tools.py  test_golden_output_harness.py  test_grids.py  test_hartree.py  test_interacting_baseline.py  test_interacting_det.py  test_ks_extract.py  test_metric_core.py  test_non_interacting_public_contract.py  test_observables_density_kernels_repro.py  test_physics_acceptance.py  test_reverse_engineering_repro.py
